--- a/Timetable_logs.ipynb
+++ b/Timetable_logs.ipynb
@@ -147,7 +147,10 @@
     "14:55 Applying for Amex jobs\n",
     "\n",
     "19 January 2025 DEL\n",
-    "14:43 Applying for jobs on SEEK"
+    "14:43 Applying for jobs on SEEK\n",
+    "\n",
+    "19 February 2025 DEL\n",
+    "19:47 Linked in connections"
    ]
   }
  ],
