--- a/3 Power BI.ipynb
+++ b/3 Power BI.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Prepare data for analysis with Power BI"
+    "# 2. Prepare data for analysis with Power BI\n",
+    "\n",
+    "https://learn.microsoft.com/en-us/training/paths/prepare-data-power-bi/`"
    ]
   },
   {
@@ -607,7 +609,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Manage workspaces and semantic models in Power BI"
+    "# 5. Manage workspaces and semantic models in Power BI\n",
+    "\n",
+    "https://learn.microsoft.com/en-us/training/paths/manage-workspaces-datasets-power-bi/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create and manage workspaces in Power BI"
    ]
   },
   {
@@ -629,7 +640,115 @@
     "- Viewer\n",
     "\n",
     "    - View and interact with an item\n",
-    "    - Read data that's stored in workspace dataflows"
+    "    - Read data that's stored in workspace dataflows\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ✅ **Tasks Only Admins Can Perform (Not Members, Contributors, or Viewers)**\n",
+    "\n",
+    "| **Admin-Only Task** | **Why It's Exclusive** |\n",
+    "|---------------------|------------------------|\n",
+    "| 🔐 **Add or remove users and assign roles** | Only Admins can manage **workspace access control**. |\n",
+    "| 🛑 **Delete the workspace** | This is a critical operation — only Admins have this authority. |\n",
+    "| ⚙️ **Edit workspace settings** (e.g. name, description, license mode) | Admins can **reconfigure workspace properties**. |\n",
+    "| 🔁 **Change workspace roles for other users** | Members can’t promote others or change roles. |\n",
+    "| 🔄 **Take ownership of reports or datasets** | Admins can **take ownership** in case the original owner is unavailable. |\n",
+    "| 📤 **Configure OneDrive refresh** for datasets | Admin-level permission needed for this auto-sync feature. |\n",
+    "| 🔄 **Publish and control deployment pipelines** (if workspace is part of pipeline) | Full control over deployments. |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔍 Role Capabilities Overview\n",
+    "\n",
+    "| Capability                                | Admin | Member | Contributor | Viewer |\n",
+    "|-------------------------------------------|:-----:|:------:|:-----------:|:------:|\n",
+    "| View content                               | ✅    | ✅     | ✅           | ✅     |\n",
+    "| Share content                              | ✅    | ✅     | ❌           | ❌     |\n",
+    "| Create/update content                      | ✅    | ✅     | ✅           | ❌     |\n",
+    "| Publish apps                               | ✅    | ✅     | ❌           | ❌     |\n",
+    "| Manage workspace roles                     | ✅    | ❌     | ❌           | ❌     |\n",
+    "| Delete workspace                           | ✅    | ❌     | ❌           | ❌     |\n",
+    "| Change settings                            | ✅    | ❌     | ❌           | ❌     |\n",
+    "| Take over data sources or datasets         | ✅    | ❌     | ❌           | ❌     |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### Introduction\n",
+    "Workspaces offer the following benefits:\n",
+    "\n",
+    "Focused collaboration efforts. You can use workspaces to house reports and dashboards for use by multiple teams.\n",
+    "\n",
+    "Ability to share and present reports and dashboards in a single environment.\n",
+    "\n",
+    "Assurance that the highest level of security is maintained by controlling who can access semantic models, reports, and dashboards.\n",
+    "\n",
+    "### Distribute a report or dashboard\n",
+    "- Create a workspace\n",
+    "\n",
+    "- Assign workspace roles\n",
+    "\n",
+    "- Create and configure an app\n",
+    "\n",
+    "In the Audience tab, you're now able to choose one or more audiences with different viewing options.\n",
+    "\n",
+    "- Update workspaces\n",
+    "\n",
+    "### Monitor usage and performance\n",
+    "\n",
+    "- Configure and view usage metric reports\n",
+    "\n",
+    "**Typical opening time, Opening time trend, Daily/7-Day Performance charts** , Filters for date,\n",
+    "\n",
+    "### Recommend a development life cycle strategy\n",
+    "Points\n",
+    "- Development environments: Development, Test, Production\n",
+    "- Configuration of deployment pipelines\n",
+    "\n",
+    "### Troubleshoot data by viewing its lineage\n",
+    "\n",
+    "### Configure data protection\n",
+    "\n",
+    "- Sensitivity labels \n",
+    "\n",
+    "Use Microsoft sensitivity labels to label dashboards, reports, semantic models, and dataflows by using the same taxonomy that is used to classify and protect files in Microsoft 365.\n",
+    "\n",
+    "Add more protection measures such as encryption and watermarks when you are exporting the data.\n",
+    "\n",
+    "Use Microsoft Cloud App Security to monitor and investigate activities in Power BI.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manage semantic models in Power BI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use a Power BI gateway to connect to on-premises data sources\n",
+    "\n",
+    "### Configure a semantic model scheduled refresh\n",
+    "\n",
+    "### Configure incremental refresh settings\n",
+    "\n",
+    "### Manage and promote semantic models\n",
+    "\n",
+    "### Troubleshoot service connectivity\n",
+    "\n",
+    "### Boost performance with query caching (Premium)"
    ]
   },
   {
